@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,7 +27,6 @@ import java.util.Map;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
@@ -40,16 +39,25 @@ import org.springframework.util.ReflectionUtils;
  *
  * @param <T> the type to instantiate
  * @author Phillip Webb
+ * @author Scott Frederick
  * @since 2.4.0
  */
 public class Instantiator<T> {
 
 	private static final Comparator<Constructor<?>> CONSTRUCTOR_COMPARATOR = Comparator
-			.<Constructor<?>>comparingInt(Constructor::getParameterCount).reversed();
+		.<Constructor<?>>comparingInt(Constructor::getParameterCount)
+		.reversed();
+
+	private static final FailureHandler throwingFailureHandler = (type, implementationName, failure) -> {
+		throw new IllegalArgumentException("Unable to instantiate " + implementationName + " [" + type.getName() + "]",
+				failure);
+	};
 
 	private final Class<?> type;
 
 	private final Map<Class<?>, Function<Class<?>, Object>> availableParameters;
+
+	private final FailureHandler failureHandler;
 
 	/**
 	 * Create a new {@link Instantiator} instance for the given type.
@@ -57,8 +65,22 @@ public class Instantiator<T> {
 	 * @param availableParameters consumer used to register available parameters
 	 */
 	public Instantiator(Class<?> type, Consumer<AvailableParameters> availableParameters) {
+		this(type, availableParameters, throwingFailureHandler);
+	}
+
+	/**
+	 * Create a new {@link Instantiator} instance for the given type.
+	 * @param type the type to instantiate
+	 * @param availableParameters consumer used to register available parameters
+	 * @param failureHandler a {@link FailureHandler} that will be called in case of
+	 * failure when instantiating objects
+	 * @since 2.7.0
+	 */
+	public Instantiator(Class<?> type, Consumer<AvailableParameters> availableParameters,
+			FailureHandler failureHandler) {
 		this.type = type;
 		this.availableParameters = getAvailableParameters(availableParameters);
+		this.failureHandler = failureHandler;
 	}
 
 	private Map<Class<?>, Function<Class<?>, Object>> getAvailableParameters(
@@ -87,7 +109,7 @@ public class Instantiator<T> {
 	 * @return a list of instantiated instances
 	 */
 	public List<T> instantiate(Collection<String> names) {
-		return instantiate((ClassLoader) null, names);
+		return instantiate(null, names);
 	}
 
 	/**
@@ -104,6 +126,40 @@ public class Instantiator<T> {
 	}
 
 	/**
+	 * Instantiate the given set of class name, injecting constructor arguments as
+	 * necessary.
+	 * @param name the class name to instantiate
+	 * @return an instantiated instance
+	 * @since 3.4.0
+	 */
+	public T instantiate(String name) {
+		return instantiate(null, name);
+	}
+
+	/**
+	 * Instantiate the given set of class name, injecting constructor arguments as
+	 * necessary.
+	 * @param classLoader the source classloader
+	 * @param name the class name to instantiate
+	 * @return an instantiated instance
+	 * @since 3.4.0
+	 */
+	public T instantiate(ClassLoader classLoader, String name) {
+		return instantiate(TypeSupplier.forName(classLoader, name));
+	}
+
+	/**
+	 * Instantiate the given class, injecting constructor arguments as necessary.
+	 * @param type the type to instantiate
+	 * @return an instantiated instance
+	 * @since 3.4.0
+	 */
+	public T instantiateType(Class<?> type) {
+		Assert.notNull(type, "Type must not be null");
+		return instantiate(TypeSupplier.forType(type));
+	}
+
+	/**
 	 * Instantiate the given set of classes, injecting constructor arguments as necessary.
 	 * @param types the types to instantiate
 	 * @return a list of instantiated instances
@@ -111,13 +167,27 @@ public class Instantiator<T> {
 	 */
 	public List<T> instantiateTypes(Collection<Class<?>> types) {
 		Assert.notNull(types, "Types must not be null");
-		return instantiate(types.stream().map((type) -> TypeSupplier.forType(type)));
+		return instantiate(types.stream().map(TypeSupplier::forType));
+	}
+
+	/**
+	 * Get an injectable argument instance for the given type. This method can be used
+	 * when manually instantiating an object without reflection.
+	 * @param <A> the argument type
+	 * @param type the argument type
+	 * @return the argument to inject or {@code null}
+	 * @since 3.4.0
+	 */
+	@SuppressWarnings("unchecked")
+	public <A> A getArg(Class<A> type) {
+		Assert.notNull(type, "'type' must not be null");
+		Function<Class<?>, Object> parameter = getAvailableParameter(type);
+		Assert.isTrue(parameter != null, "Unknown argument type " + type.getName());
+		return (A) parameter.apply(this.type);
 	}
 
 	private List<T> instantiate(Stream<TypeSupplier> typeSuppliers) {
-		List<T> instances = typeSuppliers.map(this::instantiate).collect(Collectors.toList());
-		AnnotationAwareOrderComparator.sort(instances);
-		return Collections.unmodifiableList(instances);
+		return typeSuppliers.map(this::instantiate).sorted(AnnotationAwareOrderComparator.INSTANCE).toList();
 	}
 
 	private T instantiate(TypeSupplier typeSupplier) {
@@ -127,8 +197,8 @@ public class Instantiator<T> {
 			return instantiate(type);
 		}
 		catch (Throwable ex) {
-			throw new IllegalArgumentException(
-					"Unable to instantiate " + this.type.getName() + " [" + typeSupplier.getName() + "]", ex);
+			this.failureHandler.handleFailure(this.type, typeSupplier.getName(), ex);
+			return null;
 		}
 	}
 
@@ -143,7 +213,7 @@ public class Instantiator<T> {
 				return (T) constructor.newInstance(args);
 			}
 		}
-		throw new IllegalAccessException("Unable to find suitable constructor");
+		throw new IllegalAccessException("Class [" + type.getName() + "] has no suitable constructor");
 	}
 
 	private Object[] getArgs(Class<?>[] parameterTypes) {
@@ -222,12 +292,30 @@ public class Instantiator<T> {
 				}
 
 				@Override
-				public Class<?> get() throws ClassNotFoundException {
+				public Class<?> get() {
 					return type;
 				}
 
 			};
 		}
+
+	}
+
+	/**
+	 * Strategy for handling a failure that occurs when instantiating a type.
+	 *
+	 * @since 2.7.0
+	 */
+	public interface FailureHandler {
+
+		/**
+		 * Handle the {@code failure} that occurred when instantiating the {@code type}
+		 * that was expected to be of the given {@code typeSupplier}.
+		 * @param type the type
+		 * @param implementationName the name of the implementation type
+		 * @param failure the failure that occurred
+		 */
+		void handleFailure(Class<?> type, String implementationName, Throwable failure);
 
 	}
 
